--- a/index.html
+++ b/index.html
@@ -7,21 +7,27 @@
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js"></script>
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css" rel="stylesheet" />
     <script src="https://unpkg.com/@turf/turf/turf.min.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="map" style="width: 100%; height: 600px;"></div>
     <input type="text" id="locationInput" placeholder="Voer een locatie in">
     <button onclick="calculateDistance()">Bereken Afstand</button>
-
+    <div id="distanceDisplay"></div>
+    <div id="coordinatesDisplay"></div>
+    
     <script>
         mapboxgl.accessToken = 'pk.eyJ1IjoibW9iaXNlbnNlIiwiYSI6ImNsdnhqcWs4ZzB0dWUyanBqa2JmeG85dXUifQ.1_he5hZkQk28N9ozWKOj8g';
-let userLocation;
+
+        let userLocation;
+        let inputMarker;
+        let map; // Make map globally accessible
 
         navigator.geolocation.getCurrentPosition(successLocation, errorLocation, { enableHighAccuracy: true });
 
         function successLocation(position) {
             userLocation = [position.coords.longitude, position.coords.latitude];
-            const map = new mapboxgl.Map({
+            map = new mapboxgl.Map({
                 container: 'map',
                 style: 'mapbox://styles/mapbox/streets-v12',
                 center: userLocation,
@@ -40,54 +46,37 @@ let userLocation;
         }
 
         async function calculateDistance() {
-    const locationInput = document.getElementById('locationInput').value;
-    if (!locationInput) {
-        alert("Voer een locatie in.");
-        return;
-    }
+            const locationInput = document.getElementById('locationInput').value;
+            if (!locationInput) {
+                alert("Voer een locatie in.");
+                return;
+            }
 
-    // Get the coordinates of the input location using the Mapbox Geocoding API
-    const response = await fetch('https://api.mapbox.com/geocoding/v5/mapbox.places/' + encodeURIComponent(locationInput) + '.json?access_token=' + mapboxgl.accessToken);
-    const data = await response.json();
-    const inputLocation = data.features[0].center;
+            // Get the coordinates of the input location using the Mapbox Geocoding API
+            const response = await fetch(`https://api.mapbox.com/geocoding/v5/mapbox.places/${encodeURIComponent(locationInput)}.json?access_token=${mapboxgl.accessToken}`);
+            const data = await response.json();
+            const inputLocation = data.features[0].center;
+            document.getElementById('coordinatesDisplay').innerText = 'Coördinaten van de ingevoerde locatie: ' + inputLocation.join(', ');
 
-    // Calculate the distance with Turf.js
-    var from = turf.point(userLocation);
-    var to = turf.point(inputLocation);
-    var options = { units: 'kilometers' };
-    var distance = turf.distance(from, to, options);
+            // Add a marker for the input location
+            if (inputMarker) {
+                inputMarker.remove();
+            }
+            inputMarker = new mapboxgl.Marker().setLngLat(inputLocation).addTo(map);
 
-    // Get the route from the Mapbox Directions API
-    const directionsResponse = await fetch(`https://api.mapbox.com/directions/v5/mapbox/driving/${userLocation[0]},${userLocation[1]};${inputLocation[0]},${inputLocation[1]}?access_token=${mapboxgl.accessToken}&geometries=geojson`);
-    const directionsData = await directionsResponse.json();
+            // Calculate the distance with Turf.js
+            var from = turf.point(userLocation);
+            var to = turf.point(inputLocation);
+            var options = { units: 'kilometers' };
+            var distance = turf.distance(from, to, options);
 
-    // Add the route to the map
-    map.addLayer({
-        id: 'route',
-        type: 'line',
-        source: {
-            type: 'geojson',
-            data: {
-                type: 'Feature',
-                properties: {},
-                geometry: directionsData.routes[0].geometry,
-            },
-        },
-        layout: {
-            'line-join': 'round',
-            'line-cap': 'round',
-        },
-        paint: {
-            'line-color': '#ff7e5f',
-            'line-width': 8,
-        },
-    });
+            // Display the distance
+            document.getElementById('distanceDisplay').innerText = 'De afstand tot de bestemming is ' + distance.toFixed(2) + ' kilometers.';
 
-    // Display the distance
-    alert('The distance to the destination is ' + distance + ' kilometers.');
-}
-
-
+            // Move the map to the center of the two locations
+            const center = [(inputLocation[0] + userLocation[0]) / 2, (inputLocation[1] + userLocation[1]) / 2];
+            map.setCenter(center);
+        }
     </script>
 </body>
 </html>
