added working routing system for car, bike, pedestrian

--- a/index.html
+++ b/index.html
@@ -1,120 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>API Data Weergave</title>
-    <script src="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js"></script>
-    <link href="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css" rel="stylesheet" />
-    <script src="https://unpkg.com/@turf/turf/turf.min.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="utf-8" />
+    <title>Mapbox GL Directions API Example</title>
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.5.1/mapbox-gl.js"></script>
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.5.1/mapbox-gl.css" rel="stylesheet" />
+    <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.js"></script>
+    <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.css" type="text/css" />
+    <style>
+        body { margin: 0; padding: 0; }
+        #map { position: absolute; top: 0; bottom: 0; width: 100%; }
+    </style>
 </head>
 <body>
-    <div id="map" style="width: 100%; height: 600px;"></div>
-    <input type="text" id="locationInput" placeholder="Voer een locatie in">
-    <button onclick="calculateDistance()">Bereken Afstand</button>
-    <div id="distanceDisplay"></div>
-    <div id="coordinatesDisplay"></div>
-    
+    <div id="map"></div>
     <script>
         mapboxgl.accessToken = 'pk.eyJ1IjoibW9iaXNlbnNlIiwiYSI6ImNsdnhqcWs4ZzB0dWUyanBqa2JmeG85dXUifQ.1_he5hZkQk28N9ozWKOj8g';
+        var map = new mapboxgl.Map({
+            container: 'map',
+            style: 'mapbox://styles/mapbox/streets-v11',
+            zoom: 15
+        });
 
-        let userLocation;
-        let inputMarker;
-        let line;
+        // Get user's location
+        navigator.geolocation.getCurrentPosition(function(position) {
+            var userLocation = [position.coords.longitude, position.coords.latitude];
 
-        navigator.geolocation.getCurrentPosition(successLocation, errorLocation, { enableHighAccuracy: true });
+            // Set map center to user's location
+            map.setCenter(userLocation);
 
-        function successLocation(position) {
-            userLocation = [position.coords.longitude, position.coords.latitude];
-            map = new mapboxgl.Map({
-                container: 'map',
-                style: 'mapbox://styles/mapbox/streets-v12',
-                center: userLocation,
-                zoom: 16,
-                projection: {
-                    name: 'lambertConformalConic',
-                    center: [0, 30],
-                    parallels: [30, 30]
-                }
-            });
+            // Add a marker at user's location
             new mapboxgl.Marker().setLngLat(userLocation).addTo(map);
-        }
+        });
 
-        function errorLocation() {
-            alert("Kan uw locatie niet vinden. Zorg ervoor dat uw locatie is ingeschakeld.");
-        }
+        var directions = new MapboxDirections({
+            accessToken: mapboxgl.accessToken
+        });
 
-        async function calculateDistance() {
-            const locationInput = document.getElementById('locationInput').value;
-            if (!locationInput) {
-                alert("Voer een locatie in.");
-                return;
-            }
-
-            // Get the coordinates of the input location using the Mapbox Geocoding API
-            const response = await fetch(`https://api.mapbox.com/geocoding/v5/mapbox.places/${encodeURIComponent(locationInput)}.json?access_token=${mapboxgl.accessToken}`);
-            const data = await response.json();
-            const inputLocation = data.features[0].center;
-            document.getElementById('coordinatesDisplay').innerText = 'Coördinaten van de ingevoerde locatie: ' + inputLocation.join(', ');
-
-            // Add a marker for the input location
-            if (inputMarker) {
-                inputMarker.remove();
-            }
-            inputMarker = new mapboxgl.Marker().setLngLat(inputLocation).addTo(map);
-
-            // Calculate the distance with Turf.js
-            var from = turf.point(userLocation);
-            var to = turf.point(inputLocation);
-            var options = { units: 'kilometers' };
-            var distance = turf.distance(from, to, options);
-
-            // Display the distance
-            document.getElementById('distanceDisplay').innerText = 'De afstand tot de bestemming is ' + distance.toFixed(2) + ' kilometers.';
-
-            // Move the map to the center of the two locations
-            const center = [(inputLocation[0] + userLocation[0]) / 2, (inputLocation[1] + userLocation[1]) / 2];
-            map.setCenter(center);
-
-            // Draw a line between the two locations
-            if (line) {
-                line.remove();
-            }
-            line = {
-                type: 'FeatureCollection',
-                features: [
-                    {
-                        type: 'Feature',
-                        geometry: {
-                            type: 'LineString',
-                            coordinates: [userLocation, inputLocation]
-                        }
-                    }
-                ]
-            };
-            map.addSource('line', {
-                type: 'geojson',
-                data: line
-            });
-            map.addLayer({
-                id: 'line',
-                type: 'line',
-                source: 'line',
-                layout: {
-                    'line-join': 'round',
-                    'line-cap': 'round'
-                },
-                paint: {
-                    'line-color': '#A9A9A9',
-                    'line-width': 4
-                }
-            });
-            // Na het toevoegen van de lijn aan de kaart
-console.log('Coördinaten van de lijn:', line.features[0].geometry.coordinates);
-
-
-        }
+        map.addControl(directions, 'top-left');
     </script>
 </body>
 </html>
